force-app/main/default/objects/MC_Campaign__c/MC_Campaign__c.object-meta.xml
<CustomObject>
    <label>Campagne</label>
    <nameField>
        <label>Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campagnes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>