force-app/main/default/objects/MC_Campaign__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campagnes</relationshipLabel>
    <relationshipName>MC_Campagnes</relationshipName>
    <type>Lookup</type>
</CustomField>