force-app/main/default/objects/MC_Campaign__c/fields/EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>EmailAddress__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>