force-app/main/default/objects/MC_Campaign__c/fields/ExternalKey__c.field-meta.xml
<CustomField>
    <fullName>ExternalKey__c</fullName>
    <externalId>true</externalId>
    <label>ExternalKey</label>
    <length>50</length>
    <type>Text</type>
</CustomField>