force-app/main/default/objects/MC_Campaign__c/fields/Is_Clicked__c.field-meta.xml
<CustomField>
    <fullName>Is_Clicked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliqué ?</label>
    <type>Checkbox</type>
</CustomField>