force-app/main/default/objects/MC_Campaign__c/fields/Is_opened__c.field-meta.xml
<CustomField>
    <fullName>Is_opened__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ouvert ?</label>
    <type>Checkbox</type>
</CustomField>