force-app/main/default/objects/MC_Campaign__c/fields/Last_click_date__c.field-meta.xml
<CustomField>
    <fullName>Last_click_date__c</fullName>
    <label>Date de clic</label>
    <type>DateTime</type>
</CustomField>