force-app/main/default/objects/MC_Campaign__c/fields/Last_opened_date__c.field-meta.xml
<CustomField>
    <fullName>Last_opened_date__c</fullName>
    <label>Date d&#39;ouverture</label>
    <type>DateTime</type>
</CustomField>