force-app/main/default/objects/MC_Campaign__c/fields/Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Send_Date__c</fullName>
    <label>Date d&#39;envoi</label>
    <type>DateTime</type>
</CustomField>