force-app/main/default/objects/MC_Campaign__c/fields/SendID__c.field-meta.xml
<CustomField>
    <fullName>SendID__c</fullName>
    <label>SendID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>